# mysite

./: .gitignore  Procfile  package.json  pyproject.toml
client/: package.json  tsconfig.json
client/components/: about.tsx  bgtest.tsx  header.module.css  header.tsx  hello.tsx  work.module.css  work.tsx
mysite/: urls.py
server/: pyproject.toml
server/about/: models.py
server/about/migrations/: 0001_initial.py
server/blog/: models.py  wagtail_hooks.py
server/blog/api/: __init__.py  jobs.py
server/blog/migrations/: 0001_initial.py  0002_auto_20200723_1847.py  0003_auto_20200723_1858.py  0004_auto_20200723_1902.py  0005_bloglistingpage.py  0006_auto_20200729_0159.py
server/home/: models.py
server/home/migrations/: 0003_auto_20200723_0939.py  0004_auto_20200723_1834.py  0005_auto_20200723_1847.py  0006_auto_20200727_1907.py  0007_auto_20200730_2134.py
server/jobs/: admin.py  api.py  models.py
server/jobs/migrations/: 0001_initial.py  0002_auto_20200729_2112.py  0003_job_company_image.py  0004_auto_20200729_2342.py  0005_auto_20200730_0058.py
server/mysite/: api.py  urls.py
server/mysite/settings/: base.py  dev.py
server/resume/: models.py
server/resume/migrations/: 0001_initial.py  0002_auto_20200730_1704.py  0003_auto_20200730_1711.py  0004_auto_20200730_1714.py  0005_auto_20200730_2134.py  0006_auto_20200805_2122.py  0007_auto_20200805_2135.py  0008_auto_20200805_2137.py  0009_resumepage_github.py
server/streams/: blocks.py
server/work/: models.py
server/work/migrations/: 0001_initial.py  0002_auto_20200730_0204.py
(+20 files in other folders)
